# datura

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
datura/: Untitled.ipynb  __init__.py  draw.py  line_plot.py
datura/.ipynb_checkpoints/: datura-checkpoint.py
docs/: conf.py  datura.rst  examples.rst  index.rst  introduction.rst  modules.rst
docs/_build/: .buildinfo  datura.html  examples.html  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: datura.doctree  environment.pickle  examples.doctree  index.doctree  introduction.doctree  modules.doctree
docs/_build/_modules/: index.html
docs/_build/_sources/: datura.rst.txt  examples.rst.txt  introduction.rst.txt  modules.rst.txt
docs/_build/_static/: documentation_options.js
docs/_build/doctrees/: datura.doctree  environment.pickle  examples.doctree  index.doctree  introduction.doctree  modules.doctree
docs/_build/html/: .buildinfo  (+10 more)
examples/: bar_example.py  error_patch_example.py  first_example.py  hist_example.py  jupyter_example.html  jupyter_example.ipynb  pandas_example.py  runs.csv  test_examples.py  time_example.py
examples/.ipynb_checkpoints/: jupyter_example-checkpoint.ipynb
src/datura/: datura.py
tests/: review_and_overwrite_svgs.py  test_argument_conversions.py  test_axis_limits.py  test_colors.py  test_error_plots.py  test_hist.py  test_label_placement.py  test_line_plot.py  test_make_pretty_ticks.py  test_points.py  test_scatter.py  test_ticks_text.py  test_titles.py  tide.tsv
(+6 files in other folders)
